--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,63 @@
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+
 title: Chuck Lindblom
 email: chuck@chucklindblom.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "baseurl:"
   A Site For Tech News And General Hoop-La…
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.chucklindblom.com" # the base hostname & protocol for your site, e.g. http://example.com
+production_url: "http://www.chucklindblom.com"
+url: http://www.chucklindblom.com # the base hostname & protocol for your site, e.g. http://example.com
+permalink: /posts/:categories/:title
+
+# Footer social links if not provided then the icon would not be visible
 twitter_username: lindblomchuck
 github_username:  beardooks
+youtube_username: 
+linkedin_username: 
+
+# Disqus settings (shortname is sufficient)
+disqus_shortname: Chuck
+
+# txtpen settings (shortname is sufficient)
+txtpen_sitename: 
 
 # Build settings
 markdown: kramdown
-theme: minima
-plugins:
+gems:
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-polyglot
+  - jekyll-seo-tag
+exclude:
+  - package.json
+  - Rakefile
+  - node_modules
+  - Gemfile
+  - console-theme.gemspec
+  - gulpfile.js
+  - assets/js
+  - assets/css
+  - screenshot.png
+  - LICENSE.txt
+  - README.md
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Jekyll paginate settings
+paginate: 5
+paginate_path: "/archive/page:num/"
+
+# Related posts settings
+max_related_posts_num: 4
+
+# sass settings (you can turn this on but please run gulp)
+#sass:
+#  sass_dir: _sass
+#  style: compressed
+
+# Jekyll polyglot settings
+languages: ["en"]
+default_lang: "en"
+exclude_from_localization: ["javascript", "images", "css"]
+parallel_localization: false
