--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: A Site For Tech News And General Hoop-La…
 # List of links in the navigation bar
 navbar-links:
   About: "about"
+  Resume: "resume"
   Projects:
     - LightsOut! Android App: "https://play.google.com/store/apps/details?id=org.JingoJangoStudios.lightsout"
 
@@ -39,13 +40,13 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+navbar-col: "#5989cc"
 navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-children-col: "#5989cc"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#5989cc"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
