--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#5989cc"
+navbar-col: "#788aa5"
 navbar-text-col: "#404040"
-navbar-children-col: "#5989cc"
+navbar-children-col: "#788aa5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#5989cc"
+footer-col: "#788aa5"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
