--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,13 @@ avatar: "/img/avatar-icon.png"
 
 navbar-col: "#788aa5"
 navbar-text-col: "#404040"
-navbar-children-col: "#788aa5"
+navbar-children-col: "#59677c"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+hover-col: "#e6e9ef"
 footer-col: "#788aa5"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-text-col: "#e6e9ef"
+footer-link-col: "#FFFFFF"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
