--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#bcbcbc"
+navbar-col: "#6D7993"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
-page-col: "#F5F5F5"
+page-col: "#D5D5D5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#bcbcbc"
+footer-col: "#9099A2"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
