--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ google_analytics: "UA-113441103-1"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "chucklindblom-com"
 
 # Facebook App ID
 # fb_app_id: ""
