--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#8a9dc5"
+navbar-col: "#60a3ea"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#F5F5F5"
