--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: "/Type-on-Strap"
-url: "https://sylhare.github.io"
+url: "http://www.chucklindblom.com"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
