--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ navbar-children-col: "#F5F5F5"
 page-col: "#F5F5F5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#9099A2"
+footer-col: "#60a3ea"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
