--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   About: "about"
   Resume: "resume"
   Projects:
-    - LightsOut!: "/_projects/LightsOut
+    - LightsOut!: "LightsOut"
     - LightsOut! Android App: "https://play.google.com/store/apps/details?id=org.JingoJangoStudios.lightsout"
 
 # Image to show in the navigation bar - image must be a square (width = height)
