--- a/_config.yml
+++ b/_config.yml
@@ -40,14 +40,14 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#60a3ea"
-navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-col: "#285c8f"
+navbar-text-col: "#efe3d0"
+navbar-children-col: "#919596"
 page-col: "#F5F5F5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#60a3ea"
-footer-text-col: "#777777"
+footer-col: "#285c8f"
+footer-text-col: "#efe3d0"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
