--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  beardooks
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-time-machine
 plugins:
   - jekyll-feed
 
