--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ locale:       "en"
 
 # About/contact
 author:
-  name:       Author name
-  url:        http://yourhomepage.com 
+  name:       Chuck Lindblom
+  url:        https://www.chucklindblom.com
 
 # Gems
 gems:
