--- a/_config.yml
+++ b/_config.yml
@@ -181,7 +181,7 @@ analytics:
 ##############################
 markdown    : kramdown
 highlighter : rouge
-permalink   : date
+permalink   : /:title/
 
 exclude:
   - CHANGELOG.md
